integration_tests/codegen_fail/fail/union/trait_non_object_variant.stderr
warning: field is never read: `enum_path`
   --> $DIR/mod.rs:282:5
    |
282 |     pub enum_path: Option<TokenStream>,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field is never read: `span`
   --> $DIR/mod.rs:296:5
    |
296 |     pub span: Span,
    |     ^^^^^^^^^^^^^^

warning: 2 warnings emitted

error[E0277]: the trait bound `Test: GraphQLObjectType<__S>` is not satisfied
 --> $DIR/trait_non_object_variant.rs:9:1
  |
9 | #[graphql_union]
  | ^^^^^^^^^^^^^^^^ the trait `GraphQLObjectType<__S>` is not implemented for `Test`
  |
  = note: required by `juniper::marker::GraphQLObjectType::mark`
  = note: this error originates in the attribute macro `graphql_union` (in Nightly builds, run with -Z macro-backtrace for more info)
